2005-02-07  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java (makeDeclInModule): Set value to
	reference to appropriate Declaration if StaticFieldLocation.
	Fixes Savannah bug #11822 - but only for macros in static modules.

	* kawa/standard/require.java (find(String)):  Move 'run' call to ...
	(find(Class, Environment)): ... here to also do run at compile-time.

2005-01-31  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (namespaceResolve): Treat unbound
	identifier <name> as equivalent to "class:name".

2005-01-30  Per Bothner  <per@bothner.com>

	* kawa/lang/CompileFile.java (compile_to_files): Don't generate
	error message - that's handled in Compilation.compile.
	* Shell.java (run): Print messages in all catch clauses.

2005-01-29  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java (featureMap): Add srfi-37 and args-fold.

	* kawa/standard/ScmEnv.java (lookupExtend): Inline call to
	ClassMethods.apply, but don't throw an Exception.

	* kawa/lang/Quote.java: Rename LispInterpreter -> LispLanguage.
	* kawa/lang/Translator.java: Likewise.
	* kawa/standard/Scheme.java: Likewise.  Extend LispLanguage.

2005-01-28  Per Bothner  <per@bothner.com>

	* Makefile.am (patch-source-list): Sort the result, for stability.

2005-01-26  Per Bothner  <per@bothner.com>

	* kawa/standard/with_compile_options.java (scanForm):  Put back a
	statement that should not have been deleted in 01-22 change.

2005-01-25  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java: Update Interpreter -> Language.
	* kawa/lang/Eval.java: Likewise.

2005-01-22  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (scanBody): New parameter makeList, to
	specify whether we return a list or push result on formStack.
	(rewrite_body): Fix scanBody call.
	(makeBody): Revert 01-12 change because it breaks top-level.
	* kawa/standard/begin.java (scanForm):  Use tr.scanForm option to
	create a list, and return a scanned for for later rewrite.